--- a/style.css
+++ b/style.css
@@ -6,4 +6,20 @@ body {
 
 canvas {
     background-color: black;
+    display: block;
+}
+
+@media only screen and (max-width: 720px) {
+  canvas {
+    width: 100%;
+  }
+  h1 {
+    display: none;
+  }
+}
+
+@media only screen and (max-height: 480px) {
+  canvas {
+    width: 100vh;
+  }
 }
