--- a/style.css
+++ b/style.css
@@ -1,9 +1,49 @@
 body {
+  margin: 0;
     display: flex;
     flex-direction: column;
+    justify-content: space-around;
     align-items: center;
+    background-image: url('img/11_bg/bg.jpg');
+    background-position: left center;
+    height: 100vh;
+    background-repeat: no-repeat;
+    background-size: cover;
+    backdrop-filter: brightness(0.5);
 }
 
+@font-face {
+  font-family: 'Inter', sans-serif;
+  src: url(fonts/Inter-Medium.ttf);
+}
+
+@font-face {
+  font-family: "Oleo Script", system-ui;
+  font-weight: 400;
+  src: url(fonts/OleoScript-Regular.ttf);
+}
+
+@font-face {
+  font-family: "Oleo Script", system-ui;
+  font-weight: 700;
+  src: url(fonts/OleoScript-Bold.ttf);
+}
+
+
+h1 {
+  color: #f2f2f2;
+  font-size: 50px;
+  text-align: center;
+}
+
+.instruction {    
+  color: #f2f2f2;
+  font-size: 30px;
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+}
+/* .background {    background-image: url('img/11_bg/bg.jpg');} */
 canvas {
     background-color: black;
     display: block;
