--- a/style.css
+++ b/style.css
@@ -1,32 +1,25 @@
 body {
   margin: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    background-image: url('img/11_bg/bg.jpg');
-    background-position: left center;
-    height: 100vh;
-    background-repeat: no-repeat;
-    background-size: cover;
-    backdrop-filter: brightness(0.5);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  background-image: url('img/11_bg/bg.jpg');
+  background-position: left center;
+  height: 100vh;
+  background-repeat: no-repeat;
+  background-size: cover;
+  backdrop-filter: brightness(0.5);
 }
 
 @font-face {
   font-family: 'Inter', sans-serif;
-  src: url(fonts/Inter-Medium.ttf);
+  src: url(../fonts/Inter-Medium.ttf);
 }
 
 @font-face {
-  font-family: "Oleo Script", system-ui;
-  font-weight: 400;
-  src: url(fonts/OleoScript-Regular.ttf);
-}
-
-@font-face {
-  font-family: "Oleo Script", system-ui;
-  font-weight: 700;
-  src: url(fonts/OleoScript-Bold.ttf);
+  font-family: 'Rye';
+  src: url("../fonts/Rye-Regular.ttf") format("truetype"); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
 }
 
 
@@ -34,9 +27,10 @@ h1 {
   color: #f2f2f2;
   font-size: 50px;
   text-align: center;
-}
+  font-family: 'Rye', sans-serif;}
 
 .instruction {    
+  font-family: 'Inter', sans-serif;
   color: #f2f2f2;
   font-size: 30px;
   display: flex;
