--- a/style.css
+++ b/style.css
@@ -16,6 +16,8 @@ body {
     display: flex;
     justify-content: center;
     position: relative;
+    width: 720px;
+    height: auto;
 }
 
 .startscreen-img {
@@ -32,6 +34,10 @@ body {
 
 }
 
+.d-none {
+  display: none;
+}
+
 button {
   position: absolute;
   width: 300px;
@@ -45,11 +51,14 @@ button {
   margin-top: 30px;
   cursor: pointer;
   transition: background 0.3s ease-in-out, transform 0.3s ease-in-out;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2); 
+
 }
 
 button:hover {
   background: rgb(255, 111, 0);
-  transform: scale(1.05); 
+  transform: scale(1.04); 
+  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.3); 
 }
 
 @font-face {
