--- a/style.css
+++ b/style.css
@@ -19,6 +19,20 @@ body {
     width: 720px;
     height: auto;
 }
+.btn {
+  position: absolute;
+  z-index: 3;
+  width: 10px;
+  height: 10px;
+  right: 50px;
+  cursor: pointer;
+  top: 11px;
+}
+
+.btn img {
+  width: 40px;
+  height: auto;
+}
 
 .startscreen-img {
   display: flex;
