--- a/style.css
+++ b/style.css
@@ -28,10 +28,28 @@ body {
   cursor: pointer;
   top: 11px;
 }
+.btn-container {
+  display: flex;
+  justify-content: space-between;
+}
+.btn {
+  position: absolute;
+  z-index: 3;
+  width: 10px;
+  height: 10px;
+  right: 50px;
+  cursor: pointer;
+  top: 11px;
+}
 
 .btn img {
   width: 40px;
   height: auto;
+  filter: opacity(0.6);
+
+}
+.btn img:hover {
+  filter: opacity(1);
 }
 
 .startscreen-img {
@@ -45,7 +63,7 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-
+  border-radius: 10px;
 }
 
 .d-none {
@@ -102,6 +120,7 @@ h1 {
 /* .background {    background-image: url('img/11_bg/bg.jpg');} */
 canvas {
     background-color: black;
+    border-radius: 10px;
     display: block;
 }
 
