--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ body {
 
 .game-container {
   position: relative;
+  width: 720px;
+  height: 480px;
 }
 
 .startscreen-div {
@@ -22,6 +24,8 @@ body {
     position: relative;
     width: 720px;
     height: 480px;
+    position: absolute;
+    top: 0;
 }
 
 .btn {    
