--- a/style.css
+++ b/style.css
@@ -26,6 +26,17 @@ body {
     height: 480px;
     position: absolute;
     top: 0;
+    z-index: 8;
+    background: #00000087;
+}
+
+h2 {
+  position: absolute;
+    z-index: 6;
+    color: orange;
+    font-size: 115px;
+    font-family: 'Rye';
+    margin-top: 180px;
 }
 
 .btn {    
