--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ body {
     top: 0;
     z-index: 8;
     background: #00000087;
+    border-radius: 10px;
 }
 
 h2 {
@@ -41,7 +42,7 @@ h2 {
 
 .btn {    
   position: absolute;
-  z-index: 3;
+  z-index: 10;
   width: 10px;
   height: 10px;
   right: 45px;
