--- a/style.css
+++ b/style.css
@@ -18,9 +18,12 @@ body {
   height: 480px;
 }
 
-.startscreen-div {
+.flex-container {
     display: flex;
     justify-content: center;
+}
+.startscreen-div {
+
     position: relative;
     width: 720px;
     height: 480px;
@@ -50,7 +53,7 @@ h2 {
 
 .btn-container {
   position: absolute;
-  z-index: 10;
+  z-index: 20;
   width: 100%;
 }
 
@@ -62,13 +65,14 @@ h2 {
   width: 45px;
   align-items: center;
   text-align: center;
-  transition: background 0.3s ease-in-out, transform 0.3s ease-in-out;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2); 
 }
 
 .btn:hover {
   background: rgb(255, 111, 0);
   transform: scale(1.04); 
   box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.3); 
+  transform: scale(1.04); 
 }
 
 .btn-container {
@@ -86,10 +90,10 @@ h2 {
   filter: opacity(1);
 }
 
-.startscreen-img {
+/* .startscreen-img {
   display: flex;
   justify-content: center;
-}
+} */
 
 .startscreen-img img {
   height: 480px;
@@ -103,7 +107,35 @@ h2 {
 .d-none {
   display: none;
 }
+.close-div {
+  position: relative;
+}
 
+img.btn-close {
+  height: auto;
+  position: absolute;
+  top: -40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: orange;
+  width: 40px;
+  cursor: pointer;
+}
+
+.popup-intro-text {
+  position: absolute;
+  z-index: 80;
+  background: #cacaca;
+  font-family: 'Inter', sans-serif;
+  font-size: 18px;
+  width: 24%;
+  bottom: 0;
+  right: 0px;
+  border-radius: 5px;
+  padding: 30px;
+  line-height: 1.5;
+  width: fit-content;
+}
 button {
   /* position: absolute; */
   width: 220px;
@@ -114,7 +146,7 @@ button {
   background: orange;
   font-size: 25px;
   font-family: 'Rye';
-  margin-top: 30px;
+  margin-top: 52px;
   cursor: pointer;
   transition: background 0.3s ease-in-out, transform 0.3s ease-in-out;
   box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2); 
