--- a/style.css
+++ b/style.css
@@ -12,6 +12,22 @@ body {
   backdrop-filter: brightness(0.5);
 }
 
+.overlayMobile{
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  align-items: center;
+  background-image: url("..img/12_icons/turn-device.png");
+  background-position: center;
+  background-size: cover;
+  object-fit: cover;
+  background-repeat: no-repeat;
+  margin: 0;
+  min-height: 100vh;
+  font-family: "zabars", Arial, Helvetica, sans-serif;
+  overflow: hidden;
+}
+
 h3 {
   font-family: 'Rye';
   line-height: 0;
