--- a/style.css
+++ b/style.css
@@ -10,21 +10,40 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   backdrop-filter: brightness(0.5);
+  position: relative; /* Wichtig für die Positionierung des Overlays */
 }
 
-.overlayMobile{
+.background-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+
+.overlayMobile {
+  width: 100vw;
+  height: 100vh;
+  /* transform: translate(50%, 50%); */
+  position: absolute;
   display: flex;
-  flex-direction: column;
-  /* justify-content: center; */
+  z-index: 150;
+  background-color: #cacaca;
+  justify-content: center;
   align-items: center;
-  background-image: url("..img/12_icons/turn-device.png");
-  background-position: center;
-  background-size: cover;
-  object-fit: cover;
-  background-repeat: no-repeat;
-  margin: 0;
-  min-height: 100vh;
-  font-family: "zabars", Arial, Helvetica, sans-serif;
+  text-align: center;
+}
+.turnScreenBox {
+
+  font-family: 'Rye';
+  font-size: 30px;
+}
+.turnScreenBox img {
+  width: 250px;
+  height: auto;
+}
+.background {
   overflow: hidden;
 }
 
@@ -47,11 +66,8 @@ h3 {
     justify-content: center;
 }
 .startscreen-div {
-
-    position: relative;
     width: 720px;
     height: 480px;
-    position: absolute;
     top: 0;
     z-index: 8;
     background: #00000087;
@@ -290,19 +306,34 @@ canvas {
     background-color: black;
     border-radius: 10px;
     display: block;
+    width: 100%;
 }
 
-@media only screen and (max-width: 720px) {
-  canvas {
-    width: 100%;
+@media (min-width: 721px) and (min-height: 481px) {
+  /* Verstecke das Bild, wenn Bildschirm größer als 720x480 */
+  .overlayMobile {
+    display: none;
   }
+  
+}
+@media (max-width: 720px) {
   h1 {
     display: none;
   }
 }
+@media only screen and (max-height: 600px) {
+/*   .overlayMobile {
+    display: flex;
+  } */
+  .game-container, .startscreen-div, .flex-container , canvas { 
+    width: 100%;
+  }
+ 
+}
 
 @media only screen and (max-height: 480px) {
-  canvas {
-    width: 100vh;
+ 
+  .game-container, .startscreen-div, .flex-container, canvas { 
+    width: 100vw;
   }
 }
