--- a/style.css
+++ b/style.css
@@ -13,14 +13,6 @@ body {
   position: relative; /* Wichtig für die Positionierung des Overlays */
 }
 
-.background-overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-}
 
 .overlayMobile {
   width: 100vw;
@@ -325,7 +317,7 @@ canvas {
 /*   .overlayMobile {
     display: flex;
   } */
-  .game-container, .startscreen-div, .flex-container , canvas { 
+   .flex-container , canvas { 
     width: 100%;
   }
  
@@ -333,7 +325,7 @@ canvas {
 
 @media only screen and (max-height: 480px) {
  
-  .game-container, .startscreen-div, .flex-container, canvas { 
+  .game-container, .flex-container, canvas { 
     width: 100vw;
   }
 }
