--- a/style.css
+++ b/style.css
@@ -12,7 +12,38 @@ body {
   backdrop-filter: brightness(0.5);
   position: relative; /* Wichtig für die Positionierung des Overlays */
 }
+.btn-mobile-wrapper {
+  display: none;
+  width: 100%;
+  flex-direction: column;
+}
 
+.btn-mobile-flex {
+  display: flex;
+  width: 700px;
+  justify-content: space-between;
+  padding: 0px 20px 0px 10px;
+}
+.btn-mobile-wrapper {
+  bottom: 40px;
+  position: absolute;
+}
+
+.btn-mobile {
+  background: orange;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2); 
+  border-radius: 50%;
+  border: solid;
+  padding: 10px;
+  margin-bottom: 10px;
+  width: 30px;
+  height: auto;
+}
+
+.btn-mobile img {
+  width: 16px;
+  height: 16px;
+}
 
 .overlayMobile {
   width: 100vw;
@@ -81,7 +112,7 @@ h2 {
   font-family: 'Inter', sans-serif;
   font-size: 18px;
   width: 24%;
-  transform: translateX(-10%);
+  transform: translateX(-6%);
   right: 0px;
   border-radius: 5px 11px 0 0;
   padding: 30px;
@@ -99,8 +130,8 @@ h2 {
   font-family: 'Inter', sans-serif;
   font-size: 18px;
   width: 24%;
-  transform: translateX(-10%);
-  right: 0px;
+  transform: translateX(-7%);
+    right: 0px;
   border-radius: 5px 11px 0 0;
   padding: 16px 30px;
   line-height: 1.5;
@@ -203,7 +234,7 @@ img.btn-close {
   height: auto;
   position: absolute;
   top: -19px;
-  left: 10%;
+  left: 55%;
   transform: translate(-50%, -50%);
   background: #cacaca;
   width: 40px;
@@ -217,7 +248,7 @@ img.btn-close-second {
   height: auto;
   position: absolute;
   top: -19px;
-  left: 18%;
+  left: 45%;
   transform: translate(-50%, -50%);
   background: #cacaca;
   width: 40px;
@@ -295,10 +326,13 @@ h1 {
   position: relative;
 }
 canvas {
-    background-color: black;
-    border-radius: 10px;
-    display: block;
-    width: 100%;
+  background-color: black;
+  border-radius: 10px;
+  display: block;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  z-index: -1;
 }
 
 @media (min-width: 721px) and (min-height: 481px) {
@@ -311,6 +345,9 @@ canvas {
 @media (max-width: 720px) {
   h1 {
     display: none;
+  }
+  .btn-mobile-wrapper {
+    display: flex;
   }
 }
 @media only screen and (max-height: 600px) {
