--- a/style.css
+++ b/style.css
@@ -10,8 +10,40 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   backdrop-filter: brightness(0.5);
-  position: relative; /* Wichtig für die Positionierung des Overlays */
+  position: relative;
 }
+
+.hide {
+  display: none!important;
+}
+/*Loader*/
+.loader-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  z-index: 2;
+  width: 100%;
+  align-items: center;
+  background: #303030;
+  justify-content: center;
+  height: -webkit-fill-available;
+}
+
+.loader {
+  border: 8px solid #f3f3f3; /* Graue Grenze */
+  border-top: 8px solid #3498db; /* Blaue obere Grenze */
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  animation: spin 1s linear infinite; /* Drehanimation */
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
 .btn-mobile-wrapper {
   display: none;
   width: 100%;
