--- a/style.css
+++ b/style.css
@@ -13,6 +13,21 @@ body {
   position: relative;
 }
 
+.spinner {
+  width: 100px; 
+  height: 100px; 
+  animation: spin 1s linear infinite;‚
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
 .hide {
   display: none!important;
 }
