--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 .spinner {
   width: 100px; 
   height: 100px; 
-  animation: spin 1s linear infinite;‚
+  animation: spin 1s linear infinite;
 }
 
 @keyframes spin {
