--- a/style.css
+++ b/style.css
@@ -238,9 +238,11 @@ h2 {
   transform: scale(1.04); 
 }
 
+
 .btn-container-restart {
   display: flex;
   justify-content: space-around;
+  width: 720px;
 }
 
 .btn img {
