--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 body {
   margin: 0;
-  display: flex;
+  /* display: flex; */
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  background-image: url('img/11_bg/bg.jpg');
+  background-image: url("img/11_bg/bg.jpg");
   background-position: left center;
   height: 100vh;
   background-repeat: no-repeat;
@@ -14,8 +14,8 @@ body {
 }
 
 .spinner {
-  width: 100px; 
-  height: 100px; 
+  width: 100px;
+  height: 100px;
   animation: spin 1s linear infinite;
 }
 
@@ -29,7 +29,7 @@ body {
 }
 
 .hide {
-  display: none!important;
+  display: none !important;
 }
 /*Loader*/
 .loader-container {
@@ -55,8 +55,12 @@ body {
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 .btn-mobile-wrapper {
@@ -66,10 +70,9 @@ body {
 }
 
 .btn-mobile-flex {
+  padding: 0 20px 0 20px;
   display: flex;
-  width: 700px;
   justify-content: space-between;
-  padding: 0px 20px 0px 10px;
 }
 .btn-mobile-wrapper {
   bottom: 40px;
@@ -78,7 +81,7 @@ body {
 
 .btn-mobile {
   background: orange;
-  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2); 
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
   border-radius: 50%;
   border: solid;
   padding: 10px;
@@ -105,8 +108,7 @@ body {
 }
 
 .turnScreenBox {
-
-  font-family: 'Rye';
+  font-family: "Rye";
   font-size: 30px;
 }
 .turnScreenBox img {
@@ -118,13 +120,13 @@ body {
 }
 
 h3 {
-  font-family: 'Rye';
+  font-family: "Rye";
   line-height: 0;
-  
 }
 .game-container {
   position: relative;
-  width: 720px;
+  margin: auto;
+  max-width: 720px;
   height: 480px;
 }
 
@@ -132,31 +134,31 @@ h3 {
   width: 50%;
 }
 .flex-container {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 .startscreen-div {
-    width: 720px;
-    height: 480px;
-    top: 0;
-    z-index: 8;
-    background: #00000087;
-    border-radius: 10px;
+  max-width: 720px;
+  height: 480px;
+  top: 0;
+  z-index: 8;
+  background: #00000087;
+  border-radius: 10px;
 }
 
 h2 {
   position: absolute;
-    z-index: 6;
-    color: orange;
-    font-size: 115px;
-    font-family: 'Rye';
-    margin-top: 180px;
+  z-index: 6;
+  color: orange;
+  font-size: 115px;
+  font-family: "Rye";
+  margin-top: 180px;
 }
 .popup-content-first {
   position: absolute;
   z-index: 80;
   background: #cacaca;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   font-size: 18px;
   width: 24%;
   transform: translateX(-6%);
@@ -174,11 +176,11 @@ h2 {
   position: absolute;
   z-index: 100;
   background: #cacaca;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   font-size: 18px;
   width: 24%;
   transform: translateX(-7%);
-    right: 0px;
+  right: 0px;
   border-radius: 5px 11px 0 0;
   padding: 16px 30px;
   line-height: 1.5;
@@ -188,28 +190,27 @@ h2 {
   transition: opacity 0.9s ease, bottom 0.5s ease;
 }
 
-
 .popupHideWrapperFirst {
-  opacity: 1!important;
-  bottom: 210px!important;
+  opacity: 1 !important;
+  bottom: 210px !important;
 }
 
 .popupHideWrapperSecond {
-  opacity: 1!important;
-  bottom: 193px!important; /* höhe verstellbar */
+  opacity: 1 !important;
+  bottom: 193px !important; /* höhe verstellbar */
 }
 
 .popupHideInnerContentFirst {
-  opacity: 1!important;
+  opacity: 1 !important;
 }
 .popupHideInnerContentSecond {
-  opacity: 1!important;
+  opacity: 1 !important;
 }
 
 .btn-flex {
-    display: flex;
-    gap: 12px;
-    margin: 10px 20px;
+  display: flex;
+  gap: 12px;
+  margin: 10px 20px;
 }
 
 .btn-container {
@@ -220,24 +221,22 @@ h2 {
   width: 100%;
 }
 
-
-.btn {    
+.btn {
   cursor: pointer;
   background: orange;
   border-radius: 5px;
   width: 45px;
   align-items: center;
   text-align: center;
-  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2); 
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
 }
 
 .btn:hover {
   background: rgb(255, 111, 0);
-  transform: scale(1.04); 
-  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.3); 
-  transform: scale(1.04); 
+  transform: scale(1.04);
+  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.3);
+  transform: scale(1.04);
 }
-
 
 .btn-container-restart {
   display: flex;
@@ -249,7 +248,6 @@ h2 {
   width: 40px;
   height: auto;
   filter: opacity(0.6);
-
 }
 .btn img:hover {
   filter: opacity(1);
@@ -257,7 +255,12 @@ h2 {
 
 .startscreen-img img {
   height: 480px;
+  max-width: 720px;
+  max-height: 100vh;
+
   width: 720px;
+  object-fit: cover;
+
   position: absolute;
   top: 0;
   left: 0;
@@ -272,7 +275,7 @@ h2 {
 }
 .imprint-div {
   background: #cacaca;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   width: 70%;
   margin: auto;
   border-radius: 10px;
@@ -293,7 +296,6 @@ img.btn-close {
 }
 
 img.btn-close-second {
-
   height: auto;
   position: absolute;
   top: -19px;
@@ -325,26 +327,26 @@ button {
   border-radius: 5px;
   background: orange;
   font-size: 25px;
-  font-family: 'Rye';
+  font-family: "Rye";
   margin-top: 52px;
   cursor: pointer;
   transition: background 0.3s ease-in-out, transform 0.3s ease-in-out;
-  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2); 
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
 }
 
 button:hover {
   background: rgb(255, 111, 0);
-  transform: scale(1.04); 
-  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.3); 
+  transform: scale(1.04);
+  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.3);
 }
 
 @font-face {
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   src: url(../fonts/Inter-Medium.ttf);
 }
 
 @font-face {
-  font-family: 'Rye';
+  font-family: "Rye";
   src: url("../fonts/Rye-Regular.ttf") format("truetype"); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
 }
 
@@ -352,8 +354,10 @@ h1 {
   color: #f2f2f2;
   font-size: 50px;
   text-align: center;
-  font-family: 'Rye', sans-serif;}
-
+  font-family: "Rye", sans-serif;
+  padding: 60px 0;
+  margin: 0;
+}
 
 .instruction-popup {
   width: 100%;
@@ -361,7 +365,7 @@ h1 {
   gap: 50px;
 }
 
-.instruction-popup-item  {
+.instruction-popup-item {
   display: flex;
   justify-content: normal;
   margin-top: 20px;
@@ -384,7 +388,7 @@ canvas {
   z-index: -1;
 }
 
-@media (min-width: 721px) and (min-height: 481px) {
+@media (max-width: 720px) and (orientation: landscape) {
   .overlayMobile {
     display: none;
   }
@@ -399,16 +403,16 @@ canvas {
   }
 }
 @media only screen and (max-height: 600px) {
-
-   .flex-container , canvas { 
+  .flex-container,
+  canvas {
     width: 100%;
   }
- 
 }
 
 @media only screen and (max-height: 480px) {
- 
-  .game-container, .flex-container, canvas { 
+  .game-container,
+  .flex-container,
+  canvas {
     width: 100vw;
   }
 }
