EPL bugfix overlayMobile

--- a/style.css
+++ b/style.css
@@ -1,9 +1,5 @@
 body {
   margin: 0;
-  /* display: flex; */
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
   background-image: url("img/11_bg/bg.jpg");
   background-position: left center;
   height: 100vh;
@@ -387,7 +383,6 @@ canvas {
   top: 0;
   z-index: -1;
 }
-
 @media (max-width: 720px) and (orientation: landscape) {
   .overlayMobile {
     display: none;
@@ -402,6 +397,13 @@ canvas {
     display: flex;
   }
 }
+
+@media (min-width: 1024px) {
+  .overlayMobile {
+    display: none;
+  }
+}
+
 @media only screen and (max-height: 600px) {
   .flex-container,
   canvas {
