--- a/style.css
+++ b/style.css
@@ -151,6 +151,7 @@ h2 {
   font-family: "Rye";
   margin-top: 180px;
 }
+
 .popup-content-first {
   position: absolute;
   z-index: 80;
@@ -182,7 +183,6 @@ h2 {
   padding: 16px 30px;
   line-height: 1.5;
   width: 80%;
-  /* bottom: -250px; */
   opacity: 0;
   transition: opacity 0.9s ease, bottom 0.5s ease;
 }
@@ -194,7 +194,7 @@ h2 {
 
 .popupHideWrapperSecond {
   opacity: 1 !important;
-  bottom: 193px !important; /* höhe verstellbar */
+  bottom: 193px !important;
 }
 
 .popupHideInnerContentFirst {
@@ -246,6 +246,7 @@ h2 {
   height: auto;
   filter: opacity(0.6);
 }
+
 .btn img:hover {
   filter: opacity(1);
 }
@@ -254,8 +255,7 @@ h2 {
   height: 480px;
   max-width: 720px;
   max-height: 100vh;
-
-  width: 720px;
+  width: 100%;
   object-fit: cover;
 
   position: absolute;
@@ -267,9 +267,11 @@ h2 {
 .d-none {
   display: none;
 }
+
 .close-div {
   position: relative;
 }
+
 .imprint-div {
   background: #cacaca;
   font-family: "Inter", sans-serif;
@@ -308,6 +310,7 @@ img.btn-close-second {
 img.btn-close-active {
   background-color: orange;
 }
+
 .popup-intro-text {
   opacity: 1 !important;
   bottom: 0px;
@@ -375,6 +378,7 @@ h1 {
   width: auto;
   position: relative;
 }
+
 canvas {
   background-color: black;
   border-radius: 10px;
@@ -384,6 +388,7 @@ canvas {
   top: 0;
   z-index: -1;
 }
+
 @media (max-width: 720px) and (orientation: landscape) {
   .overlayMobile {
     display: none;
@@ -399,7 +404,7 @@ canvas {
   }
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 800px) {
   .overlayMobile {
     display: none;
   }
