--- a/style.css
+++ b/style.css
@@ -43,12 +43,10 @@ body {
 }
 
 .loader {
-  border: 8px solid #f3f3f3; /* Graue Grenze */
-  border-top: 8px solid #3498db; /* Blaue obere Grenze */
   border-radius: 50%;
   width: 50px;
   height: 50px;
-  animation: spin 1s linear infinite; /* Drehanimation */
+  animation: spin 1s linear infinite;
 }
 
 @keyframes spin {
@@ -342,12 +340,12 @@ button:hover {
 
 @font-face {
   font-family: "Inter", sans-serif;
-  src: url(../fonts/Inter-Medium.ttf);
+  src: url(./fonts/Inter-Medium.ttf);
 }
 
 @font-face {
   font-family: "Rye";
-  src: url("../fonts/Rye-Regular.ttf") format("truetype"); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
+  src: url("./fonts/Rye-Regular.ttf") format("truetype"); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
 }
 
 h1 {
@@ -408,12 +406,19 @@ canvas {
   .overlayMobile {
     display: none;
   }
+
 }
 
 @media only screen and (max-height: 600px) {
   .flex-container,
   canvas {
     width: 100%;
+  }
+  .game-container {
+  height: 100vh;
+  }
+  .startscreen-div {
+    height: 100vh;
   }
 }
 
@@ -422,5 +427,8 @@ canvas {
   .flex-container,
   canvas {
     width: 100vw;
+  }
+  .game-container {
+    overflow: hidden;
   }
 }
