--- a/style.css
+++ b/style.css
@@ -131,6 +131,9 @@ h3 {
 .flex-container {
   display: flex;
   justify-content: center;
+  position: absolute;
+  top: 0;
+  max-width: 720px;
 }
 .startscreen-div {
   max-width: 720px;
@@ -236,7 +239,7 @@ h2 {
 .btn-container-restart {
   display: flex;
   justify-content: space-around;
-  width: 720px;
+  max-width: 720px;
 }
 
 .btn img {
@@ -248,18 +251,21 @@ h2 {
 .btn img:hover {
   filter: opacity(1);
 }
-
-.startscreen-img img {
-  height: 480px;
-  max-width: 720px;
-  max-height: 100vh;
+.startscreen-wrapper-img {
+  position: relative;
   width: 100%;
-  object-fit: cover;
+  max-width: 720px;
+  height: 480px;
+  overflow: hidden; /* Falls das Bild den Container überschreitet */
+  border-radius: 10px;}
 
+.startscreen-img img {    
   position: absolute;
   top: 0;
   left: 0;
-  border-radius: 10px;
+  width: 100%;
+  height: 100%;
+  object-fit: cover; 
 }
 
 .d-none {
@@ -413,9 +419,6 @@ canvas {
   .overlayMobile {
     display: none;
   }
-  h1 {
-    display: none;
-  }
 
 }
 
@@ -424,12 +427,6 @@ canvas {
   canvas {
     width: 100%;
   }
-  .game-container {
-  height: 100vh;
-  }
-  .startscreen-div {
-    height: 100vh;
-  }
 }
 
 @media only screen and (max-height: 480px) {
@@ -437,6 +434,7 @@ canvas {
   .flex-container,
   canvas {
     max-width: 720px;
+    max-height: -webkit-fill-available;
   }
   .game-container {
     overflow: hidden;
