--- a/style.css
+++ b/style.css
@@ -134,6 +134,7 @@ h3 {
   position: absolute;
   top: 0;
   max-width: 720px;
+  width: -webkit-fill-available;
 }
 .startscreen-div {
   max-width: 720px;
@@ -256,16 +257,18 @@ h2 {
   width: 100%;
   max-width: 720px;
   height: 480px;
-  overflow: hidden; /* Falls das Bild den Container überschreitet */
-  border-radius: 10px;}
+  overflow: hidden; 
+  border-radius: 10px;
+}
 
-.startscreen-img img {    
+.startscreen-img img {      
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); 
   width: 100%;
   height: 100%;
-  object-fit: cover; 
+  object-fit: inherit;
 }
 
 .d-none {
