--- a/style.css
+++ b/style.css
@@ -270,7 +270,11 @@ h2 {
   height: 100%;
   object-fit: inherit;
 }
-
+.btn-container-restart img {
+  position: absolute;
+  width: 720px;
+  height: 480px;
+}
 .d-none {
   display: none;
 }
@@ -374,7 +378,7 @@ h1 {
 
 .instruction-popup-item {
   display: flex;
-  justify-content: normal;
+  justify-content: space-between;
   margin-top: 20px;
   gap: 10px;
   align-items: center;
@@ -384,6 +388,7 @@ h1 {
   height: 40px;
   width: auto;
   position: relative;
+  top: 18px
 }
 
 canvas {
